add modularized libraries and applications

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
 		]
 	},
 	"include": ["source/**/*"],
-	"exclude": ["source/system/boot"]
+	"exclude": ["source/system/boot", "source/system/libraries"]
 }
